--- a/app/views/file_uploads/_form.html.erb
+++ b/app/views/file_uploads/_form.html.erb
@@ -39,7 +39,7 @@
   <div class="form-group">
     <%= f.label :file_type, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :file_type, :class => 'form-control' %>
+      <%= f.file_field :file_type %>
     </div>
     <%=f.error_span(:file_type) %>
   </div>
