--- a/app/views/file_uploads/_form.html.erb
+++ b/app/views/file_uploads/_form.html.erb
@@ -18,28 +18,28 @@
   <div class="form-group">
     <%= f.label :file_name, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :file_name, :class => 'form-control' %>
+      <%= f.text_field :file_name, :class => 'form-control', required: true %>
     </div>
     <%=f.error_span(:file_name) %>
   </div>
   <div class="form-group">
     <%= f.label :uploaded_at, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.datetime_select :uploaded_at, :class => 'form-control' %>
+      <%= f.date_select :uploaded_at, :class => 'form-control' %>
     </div>
     <%=f.error_span(:uploaded_at) %>
   </div>
   <div class="form-group">
     <%= f.label :description, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.text_field :description, :class => 'form-control' %>
+      <%= f.text_field :description, :class => 'form-control', required: true %>
     </div>
     <%=f.error_span(:description) %>
   </div>
   <div class="form-group">
     <%= f.label :file_type, :class => 'control-label col-lg-2' %>
     <div class="col-lg-10">
-      <%= f.file_field :file_type %>
+      <%= f.file_field :file_type, required: true %>
     </div>
     <%=f.error_span(:file_type) %>
   </div>
