--- a/app/views/file_uploads/show.html.erb
+++ b/app/views/file_uploads/show.html.erb
@@ -11,7 +11,6 @@
   <dt><strong><%= model_class.human_attribute_name(:description) %>:</strong></dt>
   <dd><%= @file_upload.description %></dd>
   <dt><strong><%= model_class.human_attribute_name(:file_type) %>:</strong></dt>
-  <dd><%= @file_upload.file_type %></dd>
   <dd><%= image_tag @file_upload.file_type %></dd>
 </dl>
 
@@ -24,6 +23,9 @@
               :method => 'delete',
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
+
+<%= link_to t('.Re-Upload', :default => t("helpers.links.Re-Upload")),
+            new_file_upload_file_version_path(@file_upload), :class => 'btn btn-default' %>
 
 
 <table class="table table-striped">
